kubernetes/letsencrypt-onetime.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: letsencrypt-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: letsencrypt-nginx
    spec:
      containers:
        - name: letsencrypt-nginx
          image: ployst/letsencrypt
          imagePullPolicy: Always
          ports:
            - name: ssl-proxy-http
              containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: letsencrypt-service
spec:
  selector:
    app: letsencrypt-nginx
  ports:
  - name: http
    port: 80
    protocol: TCP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: letsencrypt-ing
  labels:
    app: letsencrypt
spec:
  rules:
  - host: "greyhatcollective.net"
    http:
      paths:
      - path: "/.well-known"
        backend:
          serviceName: letsencrypt-service
          servicePort: 80
